--- a/index.html
+++ b/index.html
@@ -410,17 +410,17 @@
                   </svg>
                 </div>
               </div>
-              <div class="form_primary_wrapper form_primary_wrapper--mb16">
+              <div class="form_primary_wrapper1--mb16">
                 <label for="user-comment" class="form_primary_label">Comment</label>
                 <textarea id="user-comment" name="user-comment" class="form_primary_textarea"
                   placeholder="Text input"></textarea>
               </div>
-              <div class="form_primary_wrapper form_primary_wrapper--mb24">
-                <input class="form_primary_checkbox visually_hidden" type="checkbox" name="user-privacy" id="user-privacy"
+              <div class="form_primary_wrapper_form_primary_wrapper--mb24">
+                <input class="form_primary_checkbox_visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
                   value="true" required>
                 <label class="form_primary_checkbox_label" for="user-privacy">
                   <span class="form-primary_checkbox_pseudo">
-                    <svg class="form_primary_checked-icon" width="10" height="8" aria-hidden="true">
+                    <svg class="form_primary_checked_icon" width="10" height="8" aria-hidden="true">
                       <use href="./images/icons.svg#icon-Checkbox" />
                     </svg>
                   </span>
