--- a/form.html
+++ b/form.html
@@ -48,7 +48,11 @@
             <input class="input-field" type="text" placeholder="Username" name="usrnm">
           </div>
     </form>
-    
+    <div class="modal_content">
+      <button class="modal_close_button" data-action="modalTrigger" aria-label="DEFAULT_LABEL" type="button">
+        <svg width="8" height="8">
+          <use href="./images/icons.svg#icon-close" />
+        </svg>
      
 
 </body>
