--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <button class="form_subscribe_action" type="submit">
                   Subscribe
                   <svg class="form_subscribe_icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-Frame" />
+                    <use href="./images/icons.svg#icon-frame" />
                   </svg>
                 </button>
               </form>
@@ -377,7 +377,7 @@
         <div class="modal">
           <div class="modal_content">
             <button class="modal_close_button" data-action="modalTrigger" aria-label="DEFAULT_LABEL" type="button">
-              <svg width="8" height="8">
+              <svg width="8" height="8"> <symbol id="icon-close"></symbol>
                 <use href="./images/icons.svg#icon-close" />
               </svg>
             </button>
@@ -421,7 +421,7 @@
                 <label class="form_primary_checkbox_label" for="user-privacy">
                   <span class="form-primary_checkbox_pseudo">
                     <svg class="form_primary_checked_icon" width="10" height="8" aria-hidden="true">
-                      <use href="./images/icons.svg#icon-Checkbox" />
+                      <use href="./images/icons.svg#icon-checkbox" />
                     </svg>
                   </span>
                   I accept the terms and conditions of the <a href="#" class="form_primary_link">Privacy Policy</a>
