--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div class="modal">
           <div class="modal_content">
             <button class="modal_close_button" data-action="modalTrigger" aria-label="DEFAULT_LABEL" type="button">
-              <svg width="8" height="8"> <symbol id="icon-close"></symbol>
+              <svg width="8" height="8"> 
                 <use href="./images/icons.svg#icon-close" />
               </svg>
             </button>
@@ -431,7 +431,5 @@
             </form>
           </div>
         </div>
-      
-        <script src="./javascript/script.js"></script>
      </body>
 </html>
