--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                   placeholder="Text input"></textarea>
               </div>
               <div class="form_primary_wrapper_checkbox">
-                <input class="form_primary_checkbox_visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
+                <input class="form_primary_checkbox visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
                   value="true" required>
                 <label class="form_primary_checkbox_label" for="user-privacy">
                   <span class="form_primary_checkbox_pseudo">
